@@ -6,6 +6,7 @@ class ControllerGenerator < BaseScaffold
   
   def build
     template("templates/controller.erb", "src/main/java/app/controllers/#{controller_class_name}.java")
+    template("templates/controller_test.erb", "src/test/java/app/controllers/#{controller_class_name}Test.java")
   end
   
   def controller_class_name
