@@ -1,0 +1,12 @@
+package app.controllers;
+
+import static org.junit.Assert.assertNotNull;
+
+import org.junit.Test;
+
+public class <%= controller_class_name %>Test {
+
+	@Test public void fakeTest() {
+		assertNotNull("put something real.", new <%= controller_class_name %>(null, null, null));
+ 	}
+}
