@@ -1,0 +1,13 @@
+package app.models;
+
+import static org.junit.Assert.assertNotNull;
+
+import org.junit.Test;
+
+public class <%= class_name %>Test {
+
+    @Test public void fakeTest() {
+  		assertNotNull("put something real.", new <%= class_name %>());
+  	}
+}
+
