@@ -6,6 +6,7 @@ class RepositoryGenerator < BaseScaffold
   
   def build
     template("templates/repository.erb", "src/main/java/app/repositories/#{class_name}Repository.java")
+    template("templates/repository_test.erb", "src/test/java/app/repositories/#{repository_class_name}Test.java")
   end
   
   def repository_class_name
