@@ -1,0 +1,13 @@
+package app.repositories;
+
+import static org.junit.Assert.assertNotNull;
+
+import org.junit.Test;
+
+public class <%= repository_class_name %>Test {
+
+    @Test public void fakeTest() {
+  		assertNotNull("put something real.", new <%= repository_class_name %>(null));
+  	}
+}
+
